# Tauri

./: .gitignore copy  README.md  bitbucket-pipelines.yml  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/: app.vue  apps.vue  main.ts  style.css
src-tauri/: Cargo.toml  app_data.db  tauri.conf.json
src-tauri/src/: database.rs  main.rs  types.rs  user.rs
src/layout/: AppConfigurator.vue  AppFooter.vue  AppLayout.vue  AppMenu.vue  AppMenuItem.vue  AppTopbar.vue
src/layout/composables/: layout.ts
src/modules/counter/: mod.vue
src/modules/csv/: csvLoader.vue
src/modules/fetcher/: mod.vue
src/plugins/: vuetify.ts
src/plugins/unified/: unified-app.ts
src/presets/aura/: index.js
src/router/: index.ts
src/service/: CustomerService.ts
src/services/: http.ts
src/theme/: Colors.ts  Dimensions.ts  Fonts.ts
src/views/: Dashboard.vue
src/views/pages/: Crud.vue  Landing.vue  Qrcode.vue
src/views/uikit/: ButtonDoc.vue  ChartDoc.vue  InputDoc.vue  ListDoc.vue  MediaDoc.vue  MenuDoc.vue  MessagesDoc.vue  MiscDoc.vue  OverlayDoc.vue  PanelsDoc.vue  TableDoc.vue  TreeDoc.vue
