[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["http-all"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
winapi = { version = "0.3", features = ["winnt", "securitybaseapi"] }
widestring = "0.5"
aes-gcm = "0.10"
aes = "0.8"
rand = "0.8"
base64 = "0.13"
whoami = "1.2"
winapi = { version = "0.3", features = ["winnt"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
